# ScreenDetection

./: .gitignore  Main.bat  README.md  exeution.py  pyproject.toml
src/: exeution.py  get_coords.py  main.py
