[tool.poetry]
name = "screendetection"
version = "0.1.0"
description = "a simple tool that take screenshot of certian screen area and extract numbers from it."
authors = ["Xiaoyang Li <ldlglxy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.10"
opencv-python = "^4.8.1.78"
playsound = "1.3.0"
pyobjc = "^10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
